--- a/configuration/kraken/kraken.services.yml
+++ b/configuration/kraken/kraken.services.yml
@@ -78,6 +78,18 @@ services:
         class: 'QL\Hal\Core\RandomGenerator'
 
     ####################################################################################################################
+    # VALIDATORS
+    ####################################################################################################################
+
+    kraken.validator.property:
+        class: 'QL\Kraken\Validator\PropertyValidator'
+        arguments:
+            - @doctrine.em
+            - @json
+            - @kraken.crypto.encrypter
+            - @kraken.random
+
+    ####################################################################################################################
     # MIDDLEWARE
     ####################################################################################################################
 
